			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04i: *********************************

BUG: (3/30/06, GVG) Fixing Bug 910.

BUG: (3/30/06, GVG) Mistake in TSMC180.xml DRC deck (wrong NODSIZE for m5m6 contact)
FIX: value="ALL" instead of value="DE" in ruleName="29.1 TSMC".

IMP: (3/30/06, GVG) Refactoring of test code.

BUG: (3/30/06, DN) Slow after JobException.
FIX: Use "undo" instead of "recover" after JobException.

BUG: (3/30/06, DN) Removal of entry after move to another library (Bug #868).
FIX: Use Cell.move in CellChangeJobs.copyRecursively.

IMP: (3/28/06, GVG) More AFG code. Java1.5 modifications in DRC/LayoutCoverage/GeometryHandler code.

BUG: (3/28/06, RK) All-Java NCC regression test causes Netlist tool to throw exception. First exception was bug in regression, not Netlist tool.
I no longer see the second exception so I think Dima fixed it. (Bugzilla #907)

************************* Version 8.04h: *********************************

BUG: (3/27/06, GVG)  (Exception in incremental DRC on file read in (Bug #906)
FIX: Variable was not serializable.

IMP: (3/24/06, RK) First step in moving NCC regressions to Dima's and Gilda's all-Java model

IMP/MAN: (3/24/06, GVG) TestTab and GenerationTest class

BUG: (3/24/06, GVG) MaxPerm=0 on Windows causes problems (not seen on Linux/Mac) (Bug #905)
FIX: detect the condition.

IMP: (3/24/06, DN) Added method Cell.move(Library newLib) for CrossLibraryMove.
     Database methods checkFresh moved to check.    

BUG: (3/24/06, DN)) Read Library Job used getCurrentCell inside doIt.
FIX: Move it to terminateOK.

IMP/MAN: (3/23/06, GVG) Access to reloadLibrary in ExplorerTree (no cvs mode).
                                   
IMP: (3/23/06, JG): Need facility to reload changed libraries from disk (Bug #721)

IMP: (3/23/06, RK) NCC: trace resistor connectivity when highlighting equivalent Networks. Update User Manual.
